tests/require-requests-limits/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1
kind: Test
metadata:
  name: require-requests-limits
policies:
  - ../../policies/require-requests-limits-dev.yaml
resources:
  - resources.yaml
results:
  - policy: require-requests-limits-dev
    resources: [no-resources, no-cpu-request, no-memory-request, no-memory-limit, no-memory-limit-init]
    result: fail
  - policy: require-requests-limits-dev
    resources: [compliant]
    result: pass
